--- a/src/Components/Resume.css
+++ b/src/Components/Resume.css
@@ -1,6 +1,25 @@
 .resume-cont {
-  height: 100vh;
+  height: 150vh;
+  width: 100%;
   display: flex;
   align-items: center;
   color: white;
+  flex-direction: column;
+  margin-bottom: 9rem;
 }
+
+.resume-div {
+  margin-top: 7rem;
+  /* padding-top: 2rem; */
+  height: 100%;
+  width: 90%;
+  /* background-color: red; */
+  /* background-image: url(/public/imgs/resume-blue.PNG); */
+  background-repeat: no-repeat;
+  background-position: center;
+  z-index: 5;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
