--- a/src/Components/Resume.css
+++ b/src/Components/Resume.css
@@ -5,11 +5,13 @@
   align-items: center;
   color: white;
   flex-direction: column;
-  margin-bottom: 9rem;
+  margin-top: 70px;
+  margin-bottom: 0rem;
+  position: relative;
 }
 
 .resume-div {
-  margin-top: 7rem;
+  margin-top: 0rem;
   /* padding-top: 2rem; */
   height: 100%;
   width: 90%;
@@ -23,3 +25,10 @@
   align-items: center;
 }
 
+.resume-title {
+  font-size: 40px;
+  margin-bottom: 5rem;
+  background: -webkit-linear-gradient(white, #38495a);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
