--- a/src/Components/Graph.css
+++ b/src/Components/Graph.css
@@ -1,9 +1,10 @@
 .graph-cont {
   width: 80%;
-  height: 80vh;
+  height: 90vh;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   margin-bottom: 1rem;
 }
 
