--- a/src/Components/AboutMe.css
+++ b/src/Components/AboutMe.css
@@ -1,11 +1,12 @@
 .about-container {
-  height: 90vh;
+  height: 100%;
   width: 70%;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
   margin-bottom: 2rem;
+  margin-top: 5rem;
 }
 
 .about-paragraph {
@@ -17,14 +18,16 @@
 }
 
 .me-div {
-  height: 400px;
+  height: 100%;
   width: 400px;
   margin-left: 5rem;
+  display: flex;
+  justify-content: center;
 }
 
 .me-div img {
-  height: 100%;
-  width: 100%;
+  height: 400px;
+  width: 400px;
   /* margin-left: 100px; */
   object-fit: contain;
   /* border-radius: 50%; */
