--- a/src/Components/Portfolio.css
+++ b/src/Components/Portfolio.css
@@ -1,7 +1,8 @@
 .portfolio-cont {
   position: relative;
   margin-top: 100px;
-  height: 120vh;
+  height: 100%;
+  max-height: ;
   width: 100%;
   display: flex;
   flex-direction: column;
