--- a/src/Components/Email.css
+++ b/src/Components/Email.css
@@ -1,6 +1,6 @@
 .form-cont {
   height: 100%;
-  width: 40%;
+  width: 90%;
   margin-top: 4rem;
   padding-bottom: 50px;
   display: flex;
@@ -70,7 +70,7 @@ textarea {
 }
 
 .btn {
-  width: 40%;
+  width: 50%;
   height: 50px;
   border: 1px solid seashell;
   background-color: transparent;
@@ -81,4 +81,11 @@ textarea {
   'Montserrat',
   Arial, Helvetica, sans-serif;
   cursor: pointer;
+}
+
+@media only screen and (max-width: 600px) { 
+  .form-cont{
+    margin-top: 4rem;
+    padding-bottom: 0;
+  }
 }
