--- a/src/Components/Footer.css
+++ b/src/Components/Footer.css
@@ -34,3 +34,22 @@
   background-clip: text;
   background-image: linear-gradient(to bottom, white, gray);
 }
+
+@media screen and (max-width: 600px) {
+  .footer{
+    height: 30vh;
+  }
+  .footer-h3{ 
+    font-size: 40px; 
+    width: 90%;
+  }
+  .contacts-cont {
+    height: 200px;
+    width: 95%;
+    justify-items: space-between ;
+
+  }
+  .contact {
+    font-size: 20px;
+  }
+}
