Fixed Footer Width Issue
It was the #root
it also needed to be set to 100% width.

--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
   justify-content: center;
   align-items: center;
   scroll-behavior: smooth;
-  scrollbar-width: 3px;
+  /* scrollbar-width: 3px; */
   margin: 0;
 }
 
