Adjusted AboutMe, Email, NavBar and Welcome CSS
Also redid my bio

--- a/src/Components/AboutMe.css
+++ b/src/Components/AboutMe.css
@@ -38,3 +38,22 @@
   font-weight: 1000;
 }
 
+@media screen and (max-width: 600px) {
+  .about-container{
+    width: 100%;
+    flex-direction: column-reverse;
+    margin: 2rem 0 3rem 0;
+  }
+
+  .me-div {
+    width: 95%;;
+    margin: 0;
+  }
+  .me-div img {
+    width: 100%;
+  }
+
+  .about-paragraph {
+    width: 75%;
+  }
+}
