--- a/src/Components/Email.css
+++ b/src/Components/Email.css
@@ -6,9 +6,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* flex-direction: column; */
-  /* border-left: 2px solid rgb(76, 54, 155);
-  border-bottom: 3px solid rgb(61, 8, 92); */
+  justify-content: center;
+
 }
 
 form {
@@ -37,9 +36,9 @@ label {
   margin-left: 5px;
 }
 
-input {
+.form-control {
   margin-bottom: 50px;
-  width: 100%;
+  max-width: 100%;
   font-size: 18px;
 }
 
@@ -51,7 +50,7 @@ input {
 }
 
 textarea {
-  width: 100%;
+  max-width: 100%;
   height: 100px;
   font-size: 18px;
   font-family:
