--- a/src/Components/NavBar.css
+++ b/src/Components/NavBar.css
@@ -3,11 +3,12 @@ nav{
   width: 90%;
   position: fixed;
   top: 0;
-  margin-top: 30px;
+  /* margin-top: 30px; */
   z-index: 100;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
   font-weight: 600;
   letter-spacing: 3px;
   font-size: 22px;
@@ -25,7 +26,9 @@ nav{
 .menu-div {
   display: flex;
   flex-direction: row;
+  /* align-items: center; */
   max-width: 500px;
+  font-size: 25px;
 }
 
 .lb-logo {
@@ -35,8 +38,8 @@ nav{
 .menu-dd {
   display: flex;
   flex-direction: row;
-  /* width: 300px; */
   color: gray;
+  align-items: center;
 }
 
 .navLink {
@@ -45,7 +48,6 @@ nav{
 
 #x {
   font-weight: 900;
-  margin-top: 0;
   cursor: pointer;
 }
 
@@ -86,25 +88,46 @@ nav{
 
 @media screen and (max-width: 800px) {
   nav { 
-    width: 90%;
+    width: 100%;
+    height: 55px;
+    margin-top: 5px;
   }
   /* .nav-items{ 
     /* width: 50%;  
   } */
+  .menu-div {
+    align-items: unset;
+  }
+  .lb-logo {
+    margin-left: 20px;
+  }
+  #menu-div {
+    margin-right: 20px;
+  }
   .menu-dd {
     flex-direction: column-reverse;
     height: 80px;
     transition: height 1s ease-in;
     -webkit-trasition: height .5s ease-in;
     /* maybe add opacity to .01 sec ease in to make the items "appear" to drop down */
+    align-items: flex-end;
+    margin-top: 65px;
+    margin-right: 3px;
   }
   .navLink{
     padding:0;
     justify-self: end;
     text-align: right;
+    background: rgba(0, 0, 0, 0.95);
   }
   #x {
     margin: 0;
     text-align: right;
+  }
+  nav.active {
+    background-color: rgba(0, 0, 0, 0.95);
+  }
+  .link-active {
+    background-color: red;
   }
 }
