--- a/src/Components/AboutMe.css
+++ b/src/Components/AboutMe.css
@@ -38,7 +38,7 @@
   font-weight: 1000;
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 1100px) {
   .about-container{
     width: 100%;
     flex-direction: column-reverse;
@@ -47,7 +47,12 @@
 
   .me-div {
     width: 80%;
-    margin: 0;
+    /* height: 600px; */
+    margin: 0 0 45px 0;
+  }
+
+  .me-div img {
+    height: 500px;
   }
 }
 
@@ -64,6 +69,7 @@
   }
   .me-div img {
     width: 100%;
+    height: 400px;
   }
 
   .about-paragraph {
