--- a/src/Components/Footer.css
+++ b/src/Components/Footer.css
@@ -7,15 +7,14 @@
   justify-content: center;
 }
 
+.contacts-cont {
+  display: flex;
+  justify-content: space-around;
+  width: 60%;
+}
+
 .contacts-cont a {
-  text-decoration: none;
-  color: transparent;
-  background-clip: text;
-  background-image: linear-gradient(to bottom, white, gray);
-  background-image: -webkit-linear-gradient(to bottom, white, gray);
-  background-image: -moz-linear-gradient(to bottom, white, gray);
-  background-image: -o-linear-gradient(to bottom, white, gray);
-  background-image: -ms-linear-gradient(to bottom, white, gray);
+  
 }
 
 .footer-h3 {
@@ -26,20 +25,22 @@
   -webkit-text-fill-color: transparent;
 }
 
-.contacts-cont {
-  display: flex;
-  justify-content: space-around;
-  width: 60%;
-}
-
 .contact {
   text-align: center;
   text-decoration: none;
-  color: white;
+  /* color: white; */
   font-size: 25px;
   font-weight: 700;
   display: flex;
   align-items: center;
+  text-decoration: none;
+  color: transparent;
+  background-clip: text;
+  background-image: linear-gradient(to bottom, white, gray);
+  background-image: -webkit-linear-gradient(to bottom, white, gray);
+  background-image: -moz-linear-gradient(to bottom, white, gray);
+  background-image: -o-linear-gradient(to bottom, white, gray);
+  background-image: -ms-linear-gradient(to bottom, white, gray);
   /* color: transparent;
   background-clip: text;
   background-image: linear-gradient(to bottom, white, gray); */
