--- a/src/Components/ProjectStyles.css
+++ b/src/Components/ProjectStyles.css
@@ -1,7 +1,7 @@
-.project-a {
+.project-cont {
   background: linear-gradient(rgba(53, 1, 138, 0.568), rgba(0, 47, 53, 0.534));
   border-radius: 5px;
-  height: 100%;
+  height: 500px;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -20,11 +20,14 @@
   width: inherit;
 }
 
+.project-a:hover .project-image{
+  display: none;
+}
+
 .project-image{
   height: 420px;
   width: 100%;
   overflow: hidden;
-  /* object-fit: cover; */
   border-radius: 5px 5px 0 0 ;
 }
 
@@ -35,10 +38,23 @@
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   /* text-shadow: 0px 1px black; */
+  width: 60%;
+  transition-delay: 2s;
+  transition-duration: 2s;
+  margin: 10px 0 25px 0;
 }
 
 h4:hover {
   background: -webkit-linear-gradient(white, #6e6d04);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+}
+
+h4:hover span {
+  display: none;
+
+}
+
+h4:hover:after {
+  content: "Go To Site"
 }
