--- a/src/Components/Portfolio.css
+++ b/src/Components/Portfolio.css
@@ -13,10 +13,16 @@
 
 .portfolio-title {
   font-size: 40px;
-  margin-bottom: 8rem;
+  margin-bottom: 3rem;
   background: -webkit-linear-gradient(white, #38495a);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+}
+
+.under-construction {
+  font-size: 20px;
+  padding-bottom: 40px;
+  color: rgb(223, 223, 223);
 }
 
 .projects-grid {
