--- a/src/Components/Welcome.css
+++ b/src/Components/Welcome.css
@@ -16,19 +16,21 @@
 
 h1 {
   /* margin: 0; */
-  width: 90%;position: relative;
+  margin-top: 0px;
+  width: 90%;
+  position: relative;
   top: 50%;
   left: 50%;
   /* width: 90%; */
   transform: translate(-50%, -50%);
   font-size: 110px;
   font-weight: 700;
-  background: #b1b162cc -webkit-gradient(linear, left top, right top, from(#6e6d04), to(#6e6d04), color-stop(0.5, rgba(228, 228, 228, 0.952))) 0 0 no-repeat;
+  background: #b1b162cc -webkit-gradient(linear, left top, right top, from(#6e6d04), to(#6e6d04), color-stop(0.5, rgba(255, 255, 255, 0.952))) 0 0 no-repeat;
   -webkit-background-clip: text;
   -webkit-background-size: 150px;
   /* -webkit-text-fill-color: transparent; */
   color: rgba(255,255,255,0.1);
-  animation: animate 5s infinite;
+  animation: animate 7s infinite;
   /* position: relative; */
   z-index: 3;
 }
@@ -37,17 +39,15 @@ h1 {
   0%, 10%{
     background-position: -1000px;
   }
-  20%{
+  10%{
     background-position: top left;
   }
-  80% {
+  95% {
     background-position: top right;
   }
-  99%{
-    background-position: 990px;
-  }
+
   100%{
-    background-position: 1000px;
+    background-position: 1200px;
   }
 }
 
