Carousel Working Properly
Was missing one l (letter) in the css import call.

--- a/src/Components/projectsSection.css
+++ b/src/Components/projectsSection.css
@@ -20,7 +20,8 @@
 
 .project-inner-cont {
   display: flex;
-  
+  align-items: center;
+  justify-content: space-around;
 }
 
 .project-description {
@@ -56,7 +57,7 @@ a {
     margin: 0;
   }
 
-  .project {
+  .project-inner-cont {
     flex-direction: column;
     align-items: center;
   }
