Adjusted CSS for Carousel
It was not rendering the same size as the first so I had to make  the height render dynamically.

--- a/src/Components/Footer.css
+++ b/src/Components/Footer.css
@@ -70,9 +70,11 @@
   }
 }
 
-@media screen and (max-width: 380px) {
+@media screen and (max-width: 800px) {
+  .footer {
+    height: 25vh;
+  }
   .contacts-cont{
-    /* height: 300px; */
-    padding-bottom: 25px;
+    height: 100px;
   }
 }
