--- a/src/Components/projectsSection.css
+++ b/src/Components/projectsSection.css
@@ -15,18 +15,21 @@
   justify-content: space-around;
   height: 100%;
   width: 100%;
-  margin: 0;
+  /* margin-bottom: 8rem; */
+  padding-bottom: 8rem;
+  /* border-bottom: 1px solid rgba(255, 255, 255, 0.788); */
 }
 
 .project-inner-cont {
   display: flex;
   align-items: center;
   justify-content: space-around;
+  /* width: 100%; */
 }
 
 .project-description {
   padding: 30px;
-  width: 40%;
+  width: 35%;
   font-size: 20px;
 }
 
@@ -38,18 +41,31 @@ a {
 
 .project-media-cont {
   padding-top: 33px;
-  width: 40%;
+  width: 30%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
 }
 
-.project-about-img {
-  max-width: 100%;
-  height: auto;
-  margin-bottom: 3rem;
+.carousel {
+  margin-bottom: 5rem;
+  
+
 }
+
+
+
+@media screen and (max-width: 1950px ) {
+  .project-media-cont {
+    width: 40%;
+  }
+
+  .carousel {
+    margin-bottom: 5rem;
+  }
+}
+
 
 @media screen and (max-width: 1150px) {
 
@@ -70,19 +86,27 @@ a {
   .project-description {
     margin-bottom: 1rem;
   }
-
-  .carousel {
-    margin-bottom: 2rem;
-  }
 } 
+
+@media screen and (max-width: 800px) {
+  .projects-cont{
+    width: 90%;
+    margin-bottom: 30px;
+  }
+}
 
 @media screen and (max-width: 600px) {
   .project-media-cont, .project-description {
-    width: 100%;
+    width: 97%;
   }
 
   .projects-cont{
+    width: 93%;
     margin-bottom: 30px;
+  }
+
+  .project-description {
+    padding: 0;
   }
 }
  
