--- a/src/Components/Portfolio.css
+++ b/src/Components/Portfolio.css
@@ -47,3 +47,11 @@
     grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
   }
 }
+
+@media screen and (max-width: 600px) {
+  .projects-grid {
+    width: 90%;
+    grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
+  }
+}
+
