Adjusted CSS:  Margin-Bottoms for description and carousel

--- a/src/Components/projectsSection.css
+++ b/src/Components/projectsSection.css
@@ -50,8 +50,6 @@ a {
 
 .carousel {
   margin-bottom: 5rem;
-  
-
 }
 
 
@@ -107,6 +105,11 @@ a {
 
   .project-description {
     padding: 0;
+    margin-bottom: 3rem;
+  }
+
+  .carousel {
+    margin-bottom: 3rem;
   }
 }
  
