--- a/src/Components/AboutMe.css
+++ b/src/Components/AboutMe.css
@@ -64,15 +64,23 @@
   }
 
   .me-div {
-    width: 95%;;
+    width: 100%;;
     margin: 0;
   }
   .me-div img {
     width: 100%;
-    height: 400px;
+    height: 500px;
   }
 
   .about-paragraph {
-    width: 75%;
+    width: 70%;
+    font-size: 20px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .about-paragraph {
+    width: 85%;
+    font-size: 20px;
   }
 }
