--- a/src/Components/Footer.css
+++ b/src/Components/Footer.css
@@ -45,36 +45,47 @@
   -webkit-text-fill-color: transparent;
 }
 
+.footer-span {
+  margin-left: 10px;
+}
+
 @media screen and (max-width: 1000px) {
   .footer-h3 {
     font-size: 60px;
   }
 }
 
-@media screen and (max-width: 600px) {
-  .footer{
-    height: 40vh;
+
+@media screen and (max-width: 800px) {
+  .footer {
+    height: 30vh;
   }
+  .contacts-cont{
+    height: 100px;
+    width: 90%;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .gradient-svg {
+    margin: 0;
+  }
+
   .footer-h3{ 
     font-size: 40px; 
     width: 90%;
   }
   .contacts-cont {
-    height: 200px;
+    height: 150px;
     width: 95%;
     justify-items: space-between ;
-
   }
+
+  .footer-span {
+    display: none;
+  }
+
   .contact {
-    font-size: 20px;
-  }
-}
-
-@media screen and (max-width: 800px) {
-  .footer {
-    height: 25vh;
-  }
-  .contacts-cont{
-    height: 100px;
+    font-size: 33px;
   }
 }
