--- a/src/Components/Footer.css
+++ b/src/Components/Footer.css
@@ -1,10 +1,11 @@
 .footer {
   width: 100%;
-  height: 70vh;
+  height: 60vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  background-color: transparent;
 }
 
 .contacts-cont {
